--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,5 @@
-JWT_SECRET=your_super_secret_key
+# Environment Configuration
+PORT=3001
+
+# JWT Secret for token generation and verification
+JWT_SECRET=animeisbestx7
