--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "react-icons": "^5.0.1",
     "react-router": "^6.22.3",
     "react-router-dom": "^6.22.3",
+    "react-select": "^5.8.0",
     "react-star-ratings": "^2.3.0"
   },
   "devDependencies": {
