--- a/backend/package.json
+++ b/backend/package.json
@@ -20,7 +20,8 @@
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.3.0",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "twilio": "^5.0.3"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
